--- a/Assets/practice.html
+++ b/Assets/practice.html
@@ -23,7 +23,7 @@
     <div class="row">
 
         <!-- Employee 1 -->
-        <div class="card text-white bg-primary sm-3" style="max-width: 14rem;">
+        <div class="card text-white bg-primary sm-3" style="max-width: 14rem; margin: 5px;">
             <div class="card-header" id="name">
                 <h5 class="card-title">Name Here</h5>
             </div>
@@ -35,7 +35,7 @@
         </div>
 
         <!-- Employee 2 -->
-        <div class="card text-white bg-primary sm-3" style="max-width: 14rem;">
+        <div class="card text-white bg-primary sm-3" style="max-width: 14rem; margin: 5px;">
             <div class="card-header" id="name">
                 <h5 class="card-title">Name Here</h5>
             </div>
@@ -47,7 +47,7 @@
         </div>
 
         <!-- Employee 3 -->
-        <div class="card text-white bg-primary sm-3" style="max-width: 14rem;">
+        <div class="card text-white bg-primary sm-3" style="max-width: 14rem; margin: 5px;">
             <div class="card-header" id="name">
                 <h5 class="card-title">Name Here</h5>
             </div>
@@ -61,7 +61,7 @@
 
     <div class="row">
         <!-- Employee 4-->
-        <div class="card text-white bg-primary sm-3" style="max-width: 14rem;">
+        <div class="card text-white bg-primary sm-3" style="max-width: 14rem; margin: 5px;">
             <div class="card-header" id="name">
                 <h5 class="card-title">Name Here</h5>
             </div>
@@ -73,7 +73,7 @@
         </div>
 
         <!-- Employee 5 -->
-        <div class="card text-white bg-primary sm-3" style="max-width: 14rem;">
+        <div class="card text-white bg-primary sm-3" style="max-width: 14rem; margin: 5px;">
             <div class="card-header" id="name">
                 <h5 class="card-title">Name Here</h5>
             </div>
